--- a/index.html
+++ b/index.html
@@ -7,14 +7,35 @@
 </head>
 
 <body>
-    <nav id="navplaceholder">
-        nav place holder here
-    </nav>
-    <div id="section">
-        game
-    </div>
-    <div id="solutions">
-        my solutions
+    <div id="container1">
+        <nav id="navplaceholder">
+            nav place holder here
+        </nav>
+        <div id="section">
+            <div id="container2">
+                <div id="solutionContainer">
+                    <input id="solutionBox" type="text" placeholder="Enter Solution" />
+                </div>
+                <div id="buttonContainer">
+                    <input type="button" value="1" id="button1" />
+                    <input type="button" value="2" id="button2" />
+                    <input type="button" value="3" id="button3" />
+                    <input type="button" value="4" id="button4" />
+                    <input type="button" value="5" id="button5" />
+                    <input type="button" value="6" id="button6" />
+
+                    <input type="button" value="+" id="plus" />
+                    <input type="button" value="-" id="minus" />
+                    <input type="button" value="x" id="multiply" />
+                    <input type="button" value="÷" id="divide" />
+                    <input type="button" value="(" id="openBracket" />
+                    <input type="button" value=")" id="closeBracket" />
+                </div>
+            </div>
+        </div>
+        <div id="solutions">
+            my solutions
+        </div>
     </div>
 </body>
 
