Added some code in the html for mobile view. Added a submit button and made a few touchups for the index page.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="public/css/index.css" rel="stylesheet" />
 </head>
 
@@ -30,6 +31,9 @@
                     <input type="button" value="÷" id="divide" />
                     <input type="button" value="(" id="openBracket" />
                     <input type="button" value=")" id="closeBracket" />
+                </div>
+                <div id="submitContainer">
+                  <input type="button" value="Submit" id="enterButton"/>
                 </div>
             </div>
         </div>
