--- a/login.html
+++ b/login.html
@@ -3,38 +3,25 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="public/css/login.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="container1">
         <nav id="navplaceholder">
-            nav place holder here
+            <!-- nav place holder here -->
         </nav>
         <div id="section">
             <div id="container2">
-                <div id="solutionContainer">
-                    <input id="solutionBox" type="text" placeholder="Enter Solution" />
-                </div>
-                <div id="buttonContainer">
-                    <input type="button" value="1" id="button1" />
-                    <input type="button" value="2" id="button2" />
-                    <input type="button" value="3" id="button3" />
-                    <input type="button" value="4" id="button4" />
-                    <input type="button" value="5" id="button5" />
-                    <input type="button" value="6" id="button6" />
-
-                    <input type="button" value="+" id="plus" />
-                    <input type="button" value="-" id="minus" />
-                    <input type="button" value="x" id="multiply" />
-                    <input type="button" value="÷" id="divide" />
-                    <input type="button" value="(" id="openBracket" />
-                    <input type="button" value=")" id="closeBracket" />
+                <div id="container3">
+                        <input id="emailBox" type="Email" placeholder=" Enter Email" required="Email Required" />
+                        <input id="passowrdBox" type="password" placeholder=" Enter Password" required="Password Required" />
+                        <div id="createAccount"></div>
+                        <input type="button" value="Login" id="signInButton" />
+                        <input type="button" value="Sign Up" id="signUpButton" />
                 </div>
             </div>
-        </div>
-        <div id="solutions">
-            my solutions
         </div>
     </div>
 </body>
