Tested insertion of a new input field using JS.

--- a/login.html
+++ b/login.html
@@ -14,16 +14,32 @@
         </nav>
         <div id="section">
             <div id="container2">
-                <div id="container3">
-                        <input id="emailBox" type="Email" placeholder=" Enter Email" required="Email Required" />
-                        <input id="passowrdBox" type="password" placeholder=" Enter Password" required="Password Required" />
-                        <div id="createAccount"></div>
-                        <input type="button" value="Login" id="signInButton" />
-                        <input type="button" value="Sign Up" id="signUpButton" />
-                </div>
+
+                <form id="container3">
+                    <input id="emailBox" type="Email" placeholder=" Enter Email" required />
+                    <input id="passowrdBox" type="password" placeholder=" Enter Password" required />
+                    <div id="createAccount"></div>
+                    <input type="submit" value="Login" id="signInButton" />
+                    <input type="button" value="Sign Up" id="signUpButton" />
+                </form>
+
             </div>
         </div>
     </div>
+    <script>
+
+        // const signUp = document.getElementById("signUpButton");
+
+        // signUp.addEventListener("click", function () {
+
+        //     let newInput = "<input id='userName' type='text' placeholder='Your Full Name' />";
+
+        //     document.getElementById("createAccount").innerHTML = newInput;
+
+        // })
+
+
+    </script>
 </body>
 
 </html>
