Added the Navbar to index page and the login page.

--- a/login.html
+++ b/login.html
@@ -5,13 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="public/css/login.css" rel="stylesheet" />
+    <link rel="stylesheet" href="public/css/navbar.css"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body>
     <div id="container1">
-        <nav id="navplaceholder">
+        <div id="navbar">
             <!-- nav place holder here -->
-        </nav>
+        </div>
         <div id="section">
             <div id="container2">
 
@@ -26,8 +29,8 @@
             </div>
         </div>
     </div>
-    <script>
-
+    <script src="./navbar.js">
+      
         // const signUp = document.getElementById("signUpButton");
 
         // signUp.addEventListener("click", function () {
