--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="public/css/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="public/css/navbar.css"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
     <div id="container1">
-        <nav id="navplaceholder">
+        <div id="navbar">
             nav place holder here
-        </nav>
+        </div>
         <div id="section">
             <div id="container2">
                 <div id="solutionContainer">
@@ -41,6 +43,7 @@
             my solutions
         </div>
     </div>
+    <script src="./navbar.js"></script>
 </body>
 
 </html>
