--- a/navbar.html
+++ b/navbar.html
@@ -8,6 +8,6 @@
             <a href="">Contact</a>
         </div>
     </div>
-    <a href="" id="logo">24</a>
-    <a href="" id="loginButton">Login</a>
+    <a href="index.html" id="logo">24</a>
+    <a href="login.html" id="loginButton">Login</a>
 </nav>
