Added a logout button on the navbar and added a some CSS to it.

--- a/navbar.html
+++ b/navbar.html
@@ -9,5 +9,6 @@
         </div>
     </div>
     <a href="index.html" id="logo">24</a>
-    <a href="login.html" id="loginButton">Login</a>
+    <a href="index.html" id="logoutButton">Logout</a>
+    <a href="login.html" id="loginButton">Login / </a>
 </nav>
