Created a Sign Up sheet with CSS and a temporary dashboard for Admin

--- a/signUp.html
+++ b/signUp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="public/css/login.css" rel="stylesheet" />
+    <link href="public/css/signUp.css" rel="stylesheet" />
     <link rel="stylesheet" href="public/css/navbar.css"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -13,16 +13,16 @@
 <body>
     <div id="container1">
         <div id="navbar">
+      
         </div>
         <div id="section">
             <div id="container2">
 
                 <form id="container3">
-                    <input id="emailBox" type="Email" placeholder=" Enter Email" required />
-                    <input id="passowrdBox" type="password" placeholder=" Enter Password" required />
-                    <div id="createAccount"></div>
-                    <input type="submit" value="Login" id="signInButton" />
-                    <input type="button" value="Sign Up" id="signUpButton" />
+                    <input id="emailBox" type="Email" placeholder=" Enter your Email" required />
+                    <input id="passowrdBox" type="password" placeholder=" Enter your Password" required />
+                    <!-- <div id="createAccount"></div> -->
+                    <button type="button" id="createButton">Create Account</button>
                 </form>
 
             </div>
