Updated the function for updating user information.

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -35,10 +35,10 @@
   <!-- <form> -->
     <fieldset id="personalInfoFields" disabled>
       <form id="buttonForm" action="/userProfilePage.html" method="POST">
-        <label for="userFirstName"></label>
-        <input id="userFirstName" type="text" value="" required name="userFirstName">
-        <label for="userLastName"></label>
-        <input id="userLastName" type="text" value="" required name="userLastName">
+        <!-- <label for="userFirstName"></label> -->
+        <!-- <input id="userFirstName" type="text" value="" required name="userFirstName"> -->
+        <!-- <label for="userLastName"></label> -->
+        <!-- <input id="userLastName" type="text" value="" required name="userLastName"> -->
         <label for="userEmail"></label>
         <input id="userEmail" type="email" value="" required name="email">
         <label for="userPassword"></label>
