Fixed user's update function to save to the database and redirect to the user's profile page.

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -21,6 +21,7 @@
           <a href="">Leaderboard</a>
           <a href="">About</a>
           <a href="">Contact</a>
+          <a href="/index2.html">Back</a>
         </div>
       </div>
       <form action="/" method="POST">
