--- a/2800 web/search.html
+++ b/2800 web/search.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Admin DashBoard</title>
+  <title>Searching for users</title>
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/adminDash.css">
 </head>
@@ -27,32 +27,25 @@
         </form>
       </nav>
     </div>
-
     <div id="container2">
-        <div id="showAll">
-          <form id="allDB" action="/adminDash.html" method="POST">
-            <button type="submit" id="showDB">Show DataBase</button>
-          </form>
-          <div id="tableInfo"></div>
-        </div>
-
-        <div id="searchPage">
-          <form action="/search.html" method="POST">
-            <a id="searchingPage" href="/search.html" role="button">search user</a>
-          </form>
-        </div>
-
-        <!-- <div id="data">
-          <form id="database" action="/data.html" method="POST">
-            <input id="newValue" type="text" placeholder="new value">
-            <button id="save" type="submit">Save</button>
-
-            <button type="submit" id="delete">delete user</button>
-          </form>
-        </div> -->
-
+      <div id="search">
+        <form id="searchSection" action="/search.html" method="POST">
+          <input id="searchBar" type="email" placeholder=" Search" name="dashEmail">
+          <button type="submit" id="searchUsers">Search</button>
+        </form>
+        <div id="searchUser"></div>
+      </div>
+      <div id="data">
+        <form id="updateSection" action="/search.html" method="POST">
+          <input id="emailValue" type="email" placeholder="Email" name="email">
+          <input id="passValue" type="password" placeholder="Password" name="password">
+          <input id="nameValue" type="text" placeholder="First Name" name="fName">
+          <input id="newValue" type="text" placeholder="Last Name" name="lName">
+          <button id="save" type="submit">Save</button>
+          <!-- <button type="submit" id="delete">Delete User</button> -->
+        </form>
+      </div>
     </div>
-
   </div>
   <script src="navbar.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
