Created the function to update users profile Image. Updated the signUp.html to include first name and last name.

--- a/signUp.html
+++ b/signUp.html
@@ -30,7 +30,8 @@
           <input id="emailBox" type="email" placeholder=" Enter your Email" required name="emailBox">
           <label for="passowrdBox">Enter your password</label>
           <input id="passowrdBox" type="password" placeholder=" Enter your Password" required name="password">
-          <!-- <div id="createAccount"></div> -->
+          <input id="firstNameBox" type="text" placeholder=" Enter your first name" required name="firstName">
+          <input id="lastNameBox" type="text" placeholder=" Enter your last name" required name="lastName">
           <button type="submit" id="createButton">Create Account</button>
         </form>
 
