--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>24</title>
-  <!-- <link href="css/index.css" rel="stylesheet"> -->
+
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/userProfilePage.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -31,30 +31,30 @@
     </nav>
   </div>
   <div id="welcome"></div>
+  <img id="profileImage" src="img/johndoe.png">
   <form action="/userProfileImage" enctype="multipart/form-data" method="POST">
-    <input id="findImage" type="file" name="imageToUpload"/>
-    <input id="uploadButton" type="submit" value="Upload New Image"/>
+    <input id="findImage" type="file" name="imageToUpload" />
+    <input id="uploadButton" type="submit" value="Upload New Image" />
   </form>
 
   <fieldset id="userFields" disabled>
     <form id="buttonForm" action="/userProfilePage.html" method="POST">
-      <!-- <label for="userFirstName"></label> -->
-      <!-- <input id="userFirstName" type="text" value="" required name="userFirstName"> -->
-      <!-- <label for="userLastName"></label> -->
-      <!-- <input id="userLastName" type="text" value="" required name="userLastName"> -->
+      <label for="userFirstName"></label>
+      <input id="userFirstName" type="text" value="" required name="userFirstName">
+      <label for="userLastName"></label>
+      <input id="userLastName" type="text" value="" required name="userLastName">
       <label for="userEmail"></label>
       <input id="userEmail" type="email" value="" required name="email">
       <label for="userPassword"></label>
       <input id="userPassword" type="password" value="" required name="password">
 
       <button type="submit" id="saveButton">Save</button>
-      <!-- <a id="button" href="/index2.html" role="button">Save</a> -->
     </form>
   </fieldset>
   <form>
     <button type="button" id="editButton" onclick="edit()">Edit</button>
   </form>
-  <!-- </form> -->
+
   <div id="email"></div>
   <div id="password"></div>
   <!-- <script src="navbar.js"></script> -->
