--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   </div>
   <!-- <script src="navbar.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/game.js"></script>
 </body>
 
 </html>
