--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -13,50 +13,54 @@
 </head>
 
 <body>
-  <div id="navbar">
-    <nav>
-      <div id="dropdown">
-        <a href="" id="dropdownButton">Menu</a>
-        <div id="menu">
-          <a href="">Leaderboard</a>
-          <a href="">About</a>
-          <a href="">Contact</a>
-          <a href="/index2.html">Back</a>
+  <div id="container1">
+    <div id="navbar">
+      <nav>
+        <div id="dropdown">
+          <a href="" id="dropdownButton">Menu</a>
+          <div id="menu">
+            <a href="">Leaderboard</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+            <a href="/index2.html">Back</a>
+          </div>
         </div>
+        <form action="/" method="POST">
+          <a href="/index2.html" id="logo">24</a>
+          <button id="logoutButton" type="submit">Log Out</button>
+        </form>
+      </nav>
+    </div>
+    <div id="container2">
+      <div id="container3">
+        <div id="welcome"></div>
+        <div id="imageContainer">
+          <img id="profileImage" src="img/johndoe.png">
+        </div>
+        <form id=imageUpload action="/userProfileImage" enctype="multipart/form-data" method="POST">
+          <input id="findImage" type="file" name="imageToUpload" />
+          <input id="uploadButton" type="submit" value="Upload New Image" />
+        </form>
+        <fieldset id="userFields" disabled>
+          <form id="buttonForm" action="/userProfilePage.html" method="POST">
+            <label for="userFirstName"></label>
+            <input id="userFirstName" type="text" value="" required name="userFirstName">
+            <label for="userLastName"></label>
+            <input id="userLastName" type="text" value="" required name="userLastName">
+            <label for="userEmail"></label>
+            <input id="userEmail" type="email" value="" required name="email">
+            <label for="userPassword"></label>
+            <input id="userPassword" type="password" value="" required name="password">
+
+            <button type="submit" id="saveButton">Save</button>
+          </form>
+        </fieldset>
+        <form id="edit">
+          <button type="button" id="editButton" onclick="update()">Edit</button>
+        </form>
       </div>
-      <form action="/" method="POST">
-        <a href="/index2.html" id="logo">24</a>
-        <button id="logoutButton" type="submit">Log Out</button>
-      </form>
-    </nav>
+    </div>
   </div>
-  <div id="welcome"></div>
-  <img id="profileImage" src="img/johndoe.png">
-  <form action="/userProfileImage" enctype="multipart/form-data" method="POST">
-    <input id="findImage" type="file" name="imageToUpload" />
-    <input id="uploadButton" type="submit" value="Upload New Image" />
-  </form>
-
-  <fieldset id="userFields" disabled>
-    <form id="buttonForm" action="/userProfilePage.html" method="POST">
-      <label for="userFirstName"></label>
-      <input id="userFirstName" type="text" value="" required name="userFirstName">
-      <label for="userLastName"></label>
-      <input id="userLastName" type="text" value="" required name="userLastName">
-      <label for="userEmail"></label>
-      <input id="userEmail" type="email" value="" required name="email">
-      <label for="userPassword"></label>
-      <input id="userPassword" type="password" value="" required name="password">
-
-      <button type="submit" id="saveButton">Save</button>
-    </form>
-  </fieldset>
-  <form>
-    <button type="button" id="editButton" onclick="edit()">Edit</button>
-  </form>
-
-  <div id="email"></div>
-  <div id="password"></div>
   <!-- <script src="navbar.js"></script> -->
   <script src="js/userProfilePage.js"></script>
 </body>
