--- a/adminDash.html
+++ b/adminDash.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin DashBoard</title>
-  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/navbarFooter.css">
   <link rel="stylesheet" href="css/adminDash.css">
 </head>
 
@@ -13,12 +13,12 @@
   <div id="container1">
     <div id="navbar">
       <nav>
-        <div id="dropdown">
-          <a href="" id="dropdownButton">Menu</a>
+        <div id="dropdown" onclick()="displayDropdown">
+          <a type="button" id="dropdownButton" onclick()="displayDropdown">Menu</a>
           <div id="menu">
-            <a href="">Leaderboard</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a id="menuItem" href="">Leaderboard</a>
+            <a id="menuItem" href="">About</a>
+            <a id="menuItem" href="">Contact</a>
           </div>
         </div>
         <form action="/" method="POST"> 
@@ -39,8 +39,9 @@
       </div>
     </div>
   </div>
-  <script src="navbar.js"></script>
+  <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/footer.js"></script>
 </body>
 
 </html>
