--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -38,7 +38,8 @@
           <img id="profileImage" src="img/johndoe.png">
         </div>
         <form id=imageUpload action="/userProfileImage" enctype="multipart/form-data" method="POST">
-          <input id="findImage" type="file" name="imageToUpload" />
+          <label for="findImage" class="findImageStyle"> Choose Image
+          <input id="findImage" type="file" size="60" name="imageToUpload" value="Choose Image"/></label>
           <input id="uploadButton" type="submit" value="Upload New Image" />
         </form>
         <fieldset id="userFields" disabled>
