--- a/2800 web/search.html
+++ b/2800 web/search.html
@@ -32,18 +32,20 @@
         <form id="searchSection" action="/search.html" method="POST">
           <input id="searchBar" type="email" placeholder=" Search" name="dashEmail">
           <button type="submit" id="searchUsers">Search</button>
+          <!-- </form> -->
+          <div id="searchUser"></div>
+
+          <div id="data">
+            <!-- <form id="updateSection" action="/search.html" method="POST"> -->
+            <input id="emailValue" type="email" placeholder="Email" name="email">
+            <input id="passValue" type="password" placeholder="Password" name="password">
+            <input id="nameValue" type="text" placeholder="First Name" name="fName">
+            <input id="newValue" type="text" placeholder="Last Name" name="lName">
+            <button id="save" type="submit">Save</button>
+            <!-- <button type="submit" id="delete">Delete User</button> -->
+          </div>
         </form>
-        <div id="searchUser"></div>
-      </div>
-      <div id="data">
-        <form id="updateSection" action="/search.html" method="POST">
-          <input id="emailValue" type="email" placeholder="Email" name="email">
-          <input id="passValue" type="password" placeholder="Password" name="password">
-          <input id="nameValue" type="text" placeholder="First Name" name="fName">
-          <input id="newValue" type="text" placeholder="Last Name" name="lName">
-          <button id="save" type="submit">Save</button>
-          <!-- <button type="submit" id="delete">Delete User</button> -->
-        </form>
+
       </div>
     </div>
   </div>
