Fixed the CSS styling on the admin dashboard.

--- a/adminDash.html
+++ b/adminDash.html
@@ -38,7 +38,7 @@
 
       <div id="searchPage">
         <form action="/search.html" method="POST">
-          <a id="searchingPage" href="/search.html" role="button">search user</a>
+          <a id="searchingPage" href="/search.html" role="button">Search User</a>
         </form>
       </div>
     </div>
