changed id name

--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
             <input id="emailValue" type="email" placeholder="Email" name="email">
             <input id="passValue" type="password" placeholder="Password" name="password">
             <input id="nameValue" type="text" placeholder="First Name" name="fName">
-            <input id="newValue" type="text" placeholder="Last Name" name="lName">
+            <input id="lastNameValue" type="text" placeholder="Last Name" name="lName">
             <button id="save" type="submit">Save</button>
             <!-- <button type="submit" id="delete">Delete User</button> -->
           </div>
