css for search page

--- a/login.html
+++ b/login.html
@@ -13,12 +13,12 @@
   <div id="container1">
     <div id="navbar">
       <nav>
-        <div id="dropdown" onclick()="displayDropdown">
-          <a type="button" id="dropdownButton" onclick()="displayDropdown">Menu</a>
+        <div id="dropdown" onclick="displayDropdown()">
+          <a id="dropdownButton" onclick="displayDropdown()" href="">Menu</a>
           <div id="menu">
-            <a id="menuItem" href="">Leaderboard</a>
-            <a id="menuItem" href="">About</a>
-            <a id="menuItem" href="">Contact</a>
+            <a class="menuItem" href="">Leaderboard</a>
+            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="">Contact</a>
           </div>
         </div>
         <a href="/index.html" id="logo">24</a>
