--- a/search.html
+++ b/search.html
@@ -28,26 +28,30 @@
       </nav>
     </div>
     <div id="container2">
-      <div id="search">
+      <!-- <div id="container3"> -->
+      <div id="content">
         <form id="searchSection" action="/search.html" method="POST">
-          <input id="searchBar" type="email" placeholder=" Search" name="dashEmail">
-          <button type="submit" id="searchUsers">Search</button>
-          <!-- </form> -->
-          <div id="searchUser"></div>
+          <div id="search">
+            <input id="searchBar" type="email" placeholder=" Search" name="dashEmail" required="required">
+            <button type="submit" id="searchUsers">Search</button>
+            <!-- </form> -->
+            <div id="searchUser"></div>
+          </div>
 
           <div id="data">
             <!-- <form id="updateSection" action="/search.html" method="POST"> -->
-            <input id="emailValue" type="email" placeholder="Email" name="email">
-            <input id="passValue" type="password" placeholder="Password" name="password">
-            <input id="nameValue" type="text" placeholder="First Name" name="fName">
-            <input id="lastNameValue" type="text" placeholder="Last Name" name="lName">
-            <button id="save" type="submit">Save</button>
+            <input id="newVal1" type="email" placeholder="Email" name="email">
+            <input id="newVal2" type="password" placeholder="Password" name="password">
+            <input id="newVal3" type="text" placeholder="First Name" name="fName">
+            <input id="newVal4" type="text" placeholder="Last Name" name="lName">
+            <button class="save" type="submit">Save</button>
             <!-- <button type="submit" id="delete">Delete User</button> -->
           </div>
         </form>
-
+        
       </div>
     </div>
+    <!-- </div> -->
   </div>
   <script src="navbar.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
