--- a/search.html
+++ b/search.html
@@ -32,7 +32,7 @@
       <div id="content">
         <form id="searchSection" action="/search.html" method="POST">
           <div id="search">
-            <input id="searchBar" type="email" placeholder=" Search" name="dashEmail" required="required">
+            <input id="searchBar" type="email" placeholder=" Search" name="dashEmail">
             <button type="submit" id="searchUsers">Search</button>
             <!-- </form> -->
             <div id="searchUser"></div>
