--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -7,6 +7,7 @@
   <title>24</title>
 
   <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/navbarFooter.css">
   <link rel="stylesheet" href="css/userProfilePage.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -39,7 +40,7 @@
         </div>
         <form id=imageUpload action="/userProfileImage" enctype="multipart/form-data" method="POST">
           <label for="findImage" class="findImageStyle"> Choose Image
-          <input id="findImage" type="file" size="60" name="imageToUpload" value="Choose Image"/></label>
+            <input id="findImage" type="file" size="60" name="imageToUpload" value="Choose Image" /></label>
           <input id="uploadButton" type="submit" value="Upload New Image" />
         </form>
         <fieldset id="userFields" disabled>
@@ -59,6 +60,26 @@
         <form id="edit">
           <button type="button" id="editButton" onclick="update()">Edit</button>
         </form>
+      </div>
+      <div id="container4">
+        Create a Post:
+        <form id="userPosts" action="/userPost" method="POST">
+          <form>
+            <label for="textForPost"></label>
+            <textarea id="textForPost" type="text" rows="7" cols="1000" require="required" name="textForPost"
+              value="Enter text">Enter Text</textarea>
+            <input id="date" type="date">
+            <input id="time" type="time">
+          </form>
+          <form id=imageUpload action="/userProfileImage" enctype="multipart/form-data" method="POST">
+            <label for="findImage" class="findImageStyle"> Choose Image
+              <input id="findImage" type="file" size="60" name="imageToUpload" value="Choose Image" /></label>
+            <input id="uploadButton" type="submit" value="Upload New Image" />
+          </form>
+        </form>
+        <div id="timeline">
+          Time Line:
+        </div>
       </div>
     </div>
   </div>
