--- a/search.html
+++ b/search.html
@@ -39,21 +39,36 @@
         </div>
 
         <div id="data">
-          <!-- enctype="multipart/form-data" -->
-
-          <form id="updateSection" action="/search.html" method="POST">
-            <label for="newVal1"></label>
-            <input id="newVal1" type="email" value="" placeholder="Email" name="upEmail">
-            <label for="newVal2"></label>
-            <input id="newVal2" type="password" value="" placeholder="Password" name="upPassword">
-            <label for="newVal3"></label>
-            <input id="newVal3" type="text" value="" placeholder="First Name" name="fName">
-            <label for="newVal4"></label>
-            <input id="newVal4" type="text" value="" placeholder="Last Name" name="lName">
+          <form id="updateSection" action="/update" method="POST">
+            <input class="newVal1" type="email" value="" placeholder="Email" name="upEmail" required="required">
+            <input class="newVal2" type="password" value="" placeholder="Password" name="upPassword"
+              required="required">
+            <input class="newVal3" type="text" value="" placeholder="First Name" name="fName" required="required">
+            <input class="newVal4" type="text" value="" placeholder="Last Name" name="lName" required="required">
             <button class="save" type="submit">Save</button>
-            <!-- <button type="submit" id="delete">Delete User</button> -->
           </form>
+        </div>
 
+        <div id="adding">
+          <form id="addSection" action="/add" method="POST">
+            <input class="newVal" type="email" value="" placeholder="Email" name="adEmail" required="required">
+            <input class="newVal" type="password" value="" placeholder="Password" name="adPassword" required="required">
+            <input class="newVal" type="text" value="" placeholder="First Name" name="adFname" required="required">
+            <input class="newVal" type="text" value="" placeholder="Last Name" name="adLname" required="required">
+            <br>
+            <input id="newVal5" type="checkbox"  value="" name="Admin" >
+            <label for="newVal5">is Admin</label>
+            <input id="newVal6" type="checkbox"  value="" name="Admin">
+            <label for="newVal5">not Admin</label>
+            <button class="save" type="submit">add</button>
+
+          </form>
+        </div>
+
+        <div id="deleteing">
+          <form id="deleteSection" action="/delete" method="POST">
+            <button type="submit" id="delete">Delete User</button>
+          </form>
         </div>
 
       </div>
