Added function to create a new post and save it to the database. Requires more testing to work correctly.

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -71,6 +71,7 @@
           <!-- <label for="findImg" class="findImgStyle"> Choose Image -->
           <input id="findImg" type="file" size="60" name="imageToUpload" value="Choose Image" accept="img/png, image/gif, image/jpeg" multiple="multiple"></label>
           <input id="uploadImageButton" type="submit" value="Upload New Image" />
+          <input id="submitPost" type="submit" value="Submit"/>
         </form>
 
         <div id="timeline">
