--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,16 @@
-<!-- The navigation bar that is inserted into specified pages -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html>
+<!-- The navigation bar that is inserted into specified pages
 <nav>
     <div id="dropdown">
         <a href="" id="dropdownButton">Menu</a>
@@ -11,4 +23,4 @@
     <a href="index.html" id="logo">24</a>
     <a href="index.html" id="logoutButton">Logout</a>
     <a href="login.html" id="loginButton">Login / </a>
-</nav>
+</nav> -->
