--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <form action="/" method="POST"> 
-        <a href="/index2.html" id="logo">24</a>
+        <a id="logo">24</a>
         <button id="logoutButton" type="submit" >Log Out</button>
       </form>
       </nav>
@@ -60,7 +60,9 @@
   </div>
   <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/game.js"></script>
   <script src="js/footer.js"></script>
+  <script src="js/surpriseEvent.js"></script>
 </body>
 
 </html>
