--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
         </div>
         <div id="buttonContainer">
           <input type="button" id="button1"/>
-          <input type="button" id="button2" onclick="numbPressed()"/>
-          <input type="button" id="button3" onclick="numbPressed()"/>
-          <input type="button" id="button4" onclick="numbPressed()"/>
-          <input type="button" id="button5" onclick="numbPressed()"/>
-          <input type="button" id="button6" onclick="numbPressed()"/>
+          <input type="button" id="button2"/>
+          <input type="button" id="button3"/>
+          <input type="button" id="button4"/>
+          <input type="button" id="button5"/>
+          <input type="button" id="button6"/>
 
-          <input type="button" value="+" id="plus" onclick="operationPressed()"/>
-          <input type="button" value="-" id="minus" onclick="operationPressed()"/>
-          <input type="button" value="x" id="multiply" onclick="operationPressed()"/>
-          <input type="button" value="÷" id="divide" onclick="operationPressed()"/>
-          <input type="button" value="(" id="openBracket" />
-          <input type="button" value=")" id="closeBracket" />
+          <input type="button" value="+" id="plus"/>
+          <input type="button" value="-" id="minus"/>
+          <input type="button" value="x" id="multiply"/>
+          <input type="button" value="÷" id="divide"/>
+          <input type="button" value="(" id="openBracket"/>
+          <input type="button" value=")" id="closeBracket"/>
         </div>
         <div id="submitContainer">
           <input type="button" value="Submit" id="enterButton" onclick="submitAnswer()"/>
@@ -57,7 +57,7 @@
   </div>
   <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/game.js"></script>
+  <script src="js/gameBoard.js"></script>
   <script src="js/footer.js"></script>
 </body>
 
