changed the colors for the website

--- a/index2.html
+++ b/index2.html
@@ -13,19 +13,19 @@
   <div id="container1">
     <div id="navbar">
       <nav>
-        <div id="dropdown" onclick()="displayDropdown">
-          <a type="button" id="dropdownButton" onclick()="displayDropdown">Menu</a>
+        <div id="dropdown" onclick="displayDropdown()">
+          <a id="dropdownButton" onclick="displayDropdown()">Menu</a>
           <div id="menu">
-            <a href="">Leaderboard</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a class="menuItem" href="">Leaderboard</a>
+            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="">Contact</a>
             <a href="/userProfilePage.html">My Profile</a>
           </div>
         </div>
-        <form action="/" method="POST"> 
-        <a href="/index2.html" id="logo">24</a>
-        <button id="logoutButton" type="submit" >Log Out</button>
-      </form>
+        <form action="/" method="POST">
+          <a href="/index2.html" id="logo">24</a>
+          <button id="logoutButton" type="submit">Log Out</button>
+        </form>
       </nav>
     </div>
 
