--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Searching for users</title>
-  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/navbarFooter.css">
   <link rel="stylesheet" href="css/adminDash.css">
 </head>
 
@@ -16,9 +16,9 @@
         <div id="dropdown">
           <a href="" id="dropdownButton">Menu</a>
           <div id="menu">
-            <a href="">Leaderboard</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a class="menuItem" href="">Leaderboard</a>
+            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="">Contact</a>
           </div>
         </div>
         <form action="/" method="POST">
@@ -50,7 +50,6 @@
 
 
         <div id="data">
-          <span>Update User:</span>
           <form id="updateSection" action="/update" method="POST">
             <input class="newVal1" type="email" value="" placeholder="Email" name="upEmail" required="required">
             <input class="newVal2" type="password" value="" placeholder="Password" name="upPassword"
@@ -62,7 +61,6 @@
         </div>
 
         <div id="adding">
-          <span>Add User:</span>
           <form id="addSection" action="/add" method="POST">
             <input class="email" type="email" value="" placeholder="Email" name="adEmail" required="required">
             <input class="pass" type="password" value="" placeholder="Password" name="adPassword" required="required">
@@ -77,12 +75,6 @@
 
           </form>
         </div>
-
-        <!-- <div id="deleting">
-          <form id="deleteSection" action="/delete" method="POST">
-            <button type="submit" id="delete">Delete User</button>
-          </form>
-        </div> -->
 
       </div>
     </div>
