--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>24</title>
 
-  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/navbarFooter.css">
   <link rel="stylesheet" href="css/userProfilePage.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
 
@@ -19,9 +18,9 @@
         <div id="dropdown">
           <a href="" id="dropdownButton">Menu</a>
           <div id="menu">
-            <a href="">Leaderboard</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a class="menuItem" href="">Leaderboard</a>
+            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="">Contact</a>
             <a href="/index2.html">Back</a>
           </div>
         </div>
@@ -62,7 +61,7 @@
       </div>
     </div>
   </div>
-  <!-- <script src="navbar.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/userProfilePage.js"></script>
 </body>
 
