--- a/index2.html
+++ b/index2.html
@@ -60,6 +60,7 @@
   </div>
   <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/gameBoard.js"></script>
   <script src="js/footer.js"></script>
 </body>
 
