Squashed commit of the following:
commit b8450819bc96d7befece9aee4aac22065269d641
Author: Colin Lam <colin.lph.lam@gmail.com>
Date:   Wed May 18 16:40:46 2022 -0700

    npm install

commit 64b4bf8ed90a71e6a1916de58c3e0f0504c6a350
Author: Colin Lam <colin.lph.lam@gmail.com>
Date:   Wed May 18 16:38:51 2022 -0700

    changed game.js to gameboard.js

commit bed1276f4e972980c11044ecf2555e691e148fa7
Author: Colin Lam <colin.lph.lam@gmail.com>
Date:   Wed May 18 16:37:01 2022 -0700

    git ignore node modules

commit 1009b1b944908ce4903dc84590cc94d917b8e166
Author: Colin Lam <colin.lph.lam@gmail.com>
Date:   Wed May 18 16:36:35 2022 -0700

    Squashed commit of the following:

    commit 885c0ad644adf627301b5c675b13cd1d9ddad4ea
    Author: Iliya Habibi <ihabibi1@my.bcit.ca>
    Date:   Wed May 18 16:14:19 2022 -0700

        changed the colors for the website

    commit 12b69947a4935120262127c25b8402cbbf8cc4e1
    Author: Iliya Habibi <ihabibi1@my.bcit.ca>
    Date:   Tue May 17 22:47:23 2022 -0700

        fixed the error in index.html

    commit 1171cf3b86a8b7c8e66720b7b48c1059dfc799ba
    Author: Iliya Habibi <ihabibi1@my.bcit.ca>
    Date:   Tue May 17 22:45:21 2022 -0700

        removed comments

    commit d64a873950c516c59ba35a6f1e596aaf4d799a7a
    Author: Iliya Habibi <ihabibi1@my.bcit.ca>
    Date:   Tue May 17 22:43:47 2022 -0700

        fixed the css for search page

    commit 489b28af7392c2c5a494b119b3a6e0c1bec1510c
    Author: Iliya Habibi <ihabibi1@my.bcit.ca>
    Date:   Tue May 17 16:42:01 2022 -0700

        CRUD

    commit 1bcb4e1160cfcbcb4d6a54751dd84357c8fe713a
    Author: Iliya Habibi <ihabibi1@my.bcit.ca>
    Date:   Mon May 16 19:29:22 2022 -0700

        added another post for search

    commit 649a236fe3ffc5f0332c78fd34e18e60c1402d1b
    Merge: ce6fc82 9651e9b
    Author: Iliya Habibi <ihabibi1@my.bcit.ca>
    Date:   Mon May 16 15:21:12 2022 -0700

        Merge branch 'dev' into IH-TEST

    commit ce6fc82f7a6cd9df0dd5427983694884bef

--- a/search.html
+++ b/search.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Searching for users</title>
   <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/navbarFooter.css">
   <link rel="stylesheet" href="css/adminDash.css">
 </head>
 
@@ -16,9 +17,9 @@
         <div id="dropdown">
           <a href="" id="dropdownButton">Menu</a>
           <div id="menu">
-            <a href="">Leaderboard</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a class="menuItem" href="">Leaderboard</a>
+            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="">Contact</a>
           </div>
         </div>
         <form action="/" method="POST">
@@ -77,12 +78,6 @@
 
           </form>
         </div>
-
-        <!-- <div id="deleting">
-          <form id="deleteSection" action="/delete" method="POST">
-            <button type="submit" id="delete">Delete User</button>
-          </form>
-        </div> -->
 
       </div>
     </div>
