--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
         </div>
       </div>
     </div>
-    <div id="solutions">
-      my solutions
+    <div id="footer">
+      Placeholder for footer
     </div>
   </div>
-  <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/footer.js"></script>
   <script src="js/surpriseEvent.js"></script>
   <script src="js/gameBoard.js"></script>
   <script src="js/footer.js"></script>
