--- a/index2.html
+++ b/index2.html
@@ -54,11 +54,10 @@
         </div>
       </div>
     </div>
-    <div id="solutions">
-      my solutions
+    <div id="footer">
+      Placeholder for footer
     </div>
   </div>
-  <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/surpriseEvent.js"></script>
   <script src="js/gameBoard.js"></script>
