Created ajax call to upload all of the timeline data to the database.

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -65,7 +65,7 @@
       <div id="container4">
         Create a Post:
 
-        <form id="postForm" action="/createNewPost" method="POST" enctype="multipart/form-data">
+        <form id="postForm"  enctype="multipart/form-data">
           <!-- <label for="textForPost"></label> -->
           <textarea id="textForPost" type="text" rows="7" cols="1000" require="required" name="textForPost" value="Enter text">Enter text</textarea>
           <!-- <label for="findImg" class="findImgStyle"> Choose Image -->
@@ -77,7 +77,7 @@
         <!-- action="/createNewPost" method="POST" enctype="multipart/form-data" -->
         <div id="timeline">
           Time Line:
-          <img id ="timelineImages" src="/img.johndoe.png">
+          <!-- <img id ="timelineImages" src="/img.johndoe.png"> -->
         </div>
       </div>
     </div>
