Added code to save image into images folder, updated post function to create new posts for user instead of update.

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -70,7 +70,7 @@
           <textarea id="textForPost" type="text" rows="7" cols="1000" require="required" name="textForPost" value="Enter text">Enter text</textarea>
           <!-- <label for="findImg" class="findImgStyle"> Choose Image -->
           <br>
-          <input id="findImg" type="file" size="60" name="files" value="Choose Image" accept="image/png, image/gif, image/jpeg" multiple="multiple"></label>
+          <input id="findImg" type="file" size="60" name="fileImage" value="Choose Image" accept="image/png, image/gif, image/jpeg" multiple="multiple"></label>
           <!-- <input id="uploadImageButton" type="submit" value="Upload New Image" /> -->
           <button id="submitPost" type="submit" value="Submit">Submit</button>
         </form>
