--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="section">
       <div id="container2">
         <div id="solutionContainer">
-          <div id="solutionBox"><p id="solutionLine"></p></div>
+          <div id="solutionBox" onclick="playAgain()"><p id="solutionLine"></p></div>
         </div>
         <div id="buttonContainer">
           <input type="button" id="button1"/>
@@ -48,6 +48,7 @@
         </div>
         <div id="submitContainer">
           <input type="button" value="Submit" id="enterButton" onclick="submitAnswer()"/>
+          <input type="button" value="Clear" id="clearButton" onclick="clearBoard()">
         </div>
       </div>
     </div>
