--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="navbar">
       <nav>
         <div id="dropdown" onclick="displayDropdown()">
-          <a  id="dropdownButton" onclick="displayDropdown()">Menu</a>
+          <a id="dropdownButton" onclick="displayDropdown()">Menu</a>
           <div id="menu">
             <a class="menuItem" href="">Leaderboard</a>
             <a class="menuItem" href="">About</a>
@@ -29,31 +29,31 @@
     <div id="section">
       <div id="container2">
         <div id="solutionContainer">
-          <div id="solutionBox"><p id="solutionLine"></p></div>
+          <div id="solutionBox">
+            <p id="solutionLine"></p>
+          </div>
         </div>
         <div id="buttonContainer">
-          <input type="button" id="button1"/>
-          <input type="button" id="button2"/>
-          <input type="button" id="button3"/>
-          <input type="button" id="button4"/>
-          <input type="button" id="button5"/>
-          <input type="button" id="button6"/>
+          <input type="button" value="." id="button1" />
+          <input type="button" value="." id="button2" />
+          <input type="button" value="." id="button3" />
+          <input type="button" value="." id="button4" />
+          <input type="button" value="." id="button5" />
+          <input type="button" value="." id="button6" />
 
-          <input type="button" value="+" id="plus"/>
-          <input type="button" value="-" id="minus"/>
-          <input type="button" value="x" id="multiply"/>
-          <input type="button" value="÷" id="divide"/>
-          <input type="button" value="(" id="openBracket"/>
-          <input type="button" value=")" id="closeBracket"/>
+          <input type="button" value="+" id="plus" />
+          <input type="button" value="-" id="minus" />
+          <input type="button" value="x" id="multiply" />
+          <input type="button" value="÷" id="divide" />
+          <input type="button" value="(" id="openBracket" />
+          <input type="button" value=")" id="closeBracket" />
         </div>
         <div id="submitContainer">
-          <input type="button" value="Submit" id="enterButton" onclick="submitAnswer()"/>
+          <input type="button" value="Submit" id="enterButton" onclick="submitAnswer()" />
         </div>
       </div>
     </div>
-    <div id="solutions">
-      my solutions
-    </div>
+    <div id="solutions"></div>
   </div>
   <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
