--- a/index2.html
+++ b/index2.html
@@ -54,9 +54,7 @@
         </div>
       </div>
     </div>
-    <div id="solutions">
-      my solutions
-    </div>
+    <div id="solutions"></div>
   </div>
   <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
