Created server side code to be able to edit the users posts

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -90,9 +90,9 @@
             accept="image/png, image/gif, image/jpeg" multiple="multiple"></label>
 
             <label for="newTextInput1">Text: </label>
-            <input id="newTextInput" type="text" value="">
+            <input id="newTextInput" type="text">
   
-            <button id="editPost" type="submit"></button>
+            <button id="editPost" type="submit">Submit</button>
           </form>
 
         </div>
